--- a/README
+++ b/README
@@ -1,2 +1,16 @@
-Live streams for lots of news.
+Worls News Live Addon for XBMC - Live streams for lots of news
+
+This script is released freely without restrictions, but also without
+warrenty as described in the file "COPYING.txt"
+
+Usage:
+
+    Place in xbmc addons directory
+    Select the statio you want to play
+    Add your own streams if you want
+
+Credits:
+
+ - andrepl
+	Initial addon development.
 
