--- a/README
+++ b/README
@@ -6,7 +6,7 @@ warrenty as described in the file "COPYING.txt"
 Usage:
 
     Place in xbmc addons directory
-    Select the statio you want to play
+    Select the live station you want to watch
     Add your own streams if you want
 
 Credits:
