--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.3.0.1 - Small change on the repo including WNL
+
+1.3.0 - Fixed couple of streams including Bloomberg, ABC News 24 etc
+
+1.2.9 - Couple small code changes
+
 1.2.8 - Fixed CNN streams
 
 1.2.7 - Fixed the Euronews stream and added a French one as well
