--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.1.0 - Fixed CNBC stream
+
 1.3.0.1 - Small change on the repo including WNL
 
 1.3.0 - Fixed couple of streams including Bloomberg, ABC News 24 etc
