--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.1.8 - Added i24news, Hided BBC News 
+
 1.3.1.7 - Hided BigPond News; Changed to GeoRestricted ABC News 24 (Australia)
 
 1.3.1.6 - Fixed SkyNews International, CNN, BBC World News, Aljazeera (EN, AR)
