--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.2.0 - Fixed Bloomberg
+
 1.3.1.9 - Added i24news, Hided BBC News 
 
 1.3.1.8 - Moved ABC News to folder list, added non restricted stream to list
