--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.3.3.1 - Added NHK World, CCTV News, Arirang TV World, MHz Worldview
+
+1.3.3 - v13.x support, clean-up 
+
 1.3.2.5 - Fixed BBC World News
 
 1.3.2.4 - Fixed BBC World News
