--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.4.3 - Fixed i24News
+
 1.3.4.2 - Fixed BBC News, RT, Reuters, France24, Sky News Arabia, Removed DVB
 
 1.3.4.1 - Changing size of the logos, cleaned up code, Added Sky News
