--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.4.4 - Fixed CNN, BBC World News. Added BBC News and Rai News24
+
 1.3.4.3 - Fixed i24News
 
 1.3.4.2 - Fixed BBC News, RT, Reuters, France24, Sky News Arabia, Removed DVB
