--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.5.1 - Fixed Mhz, NHK
+
 1.3.5 - edit add-on.xml, added import modules
 
 1.3.4.4 - Fixed CNN, BBC World News. Added BBC News and Rai News24
