--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.5.3 - Fix Sky News, remove BBC World News and CCTV, change Bloomberg to One channel only. 
+
 1.3.5.2 - Fix Al Jazeera English, remove Al Jazeera US, remove Sky News International for now
 
 1.3.5.1 - Fixed Mhz, NHK
