--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.8.1 - Fix UAToday
+
 1.3.8 - Added Sky News HD. Fix UAToday, euronews 
 
 1.3.7 - Fix BBC Arabic, Sky News, eNCA, UAToday logo. Added ABC News
