--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.8.4 - Fix CNN, PressTV, remove a couple non working streams
+
 1.3.8.3 - Rearrange BBC, add BBC Persian
 
 1.3.8.2 - Fix Euronews
